# fynix

./: .gitmodules  AGENTS.md  Cargo.toml  README.md
crates/fynix/: Cargo.toml  README.md
crates/fynix/examples/: composer_multiworld_example.rs
crates/fynix/src/: any_wrapper.rs  ctx.rs  element.rs  field_index.rs  id.rs  layout.rs  lib.rs  resource.rs  signal.rs  style.rs  type_table.rs
crates/fynix/src/element/: composer.rs  layout.rs  meta.rs  table.rs
crates/fynix/src/signal/: meta.rs
crates/fynix_elements/: Cargo.toml
crates/fynix_elements/examples/: hello_world.rs
crates/fynix_elements/src/: lib.rs
crates/fynix_macros/: Cargo.toml
crates/fynix_macros/src/: lib.rs
crates/fynix_vello/: Cargo.toml
crates/fynix_vello/src/: lib.rs
docs/: PLANS.md  VISION.md
examples/fynix_composer_examples/: Cargo.toml
examples/fynix_composer_examples/examples/: composer_example.rs
examples/vello_winit_examples/: Cargo.toml
examples/vello_winit_examples/examples/: hello_world.rs
examples/vello_winit_examples/src/: lib.rs
src/: any_wrapper.rs  element.rs  field_index.rs  field_map.rs  lib.rs  registry.rs  rule_set.rs  setter.rs  style.rs  style_map.rs  type_map.rs  type_table.rs
