[workspace]
members = ["crates/*", "examples/*"]
exclude = ["vendor/"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/voxell-tech/fynix"

[workspace.dependencies]
fynix = { path = "crates/fynix" }
fynix_macros = { path = "crates/fynix_macros" }
fynix_elements = { path = "crates/fynix_elements" }
fynix_vello = { path = "crates/fynix_vello" }
rectree = { git = "https://github.com/voxell-tech/rectree", rev = "08ddf2a" }
# rectree = { path = "vendor/rectree/crates/rectree" }
field_path = { git = "https://github.com/voxell-tech/field_path", rev = "1e8f41c" }
sparse_map = "0.1.2"
parley = { version = "0.7.0", default-features = false, features = ["libm"] }
vello = "0.7.0"
hashbrown = "0.16.1"
linkme = "0.3.35"
